<resources>
    <string name="app_name">CompoBuy</string>
    <string name="tv_user">Usuario:</string>
    <string name="et_user">Usuario</string>
    <string name="tv_pass">Contraseña:</string>
    <string name="et_pass">Contraseña</string>
    <string name="tv_rep_pass">Repetir contraseña:</string>
    <string name="et_rep_pass">Repetir contraseña</string>
    <string name="et_date">Fecha de nacimiento</string>
    <string name="tv_date">Fecha de nacimiento:</string>
    <string name="tv_city">Ciudad:</string>
    <string name="et_city">Ciudad</string>
    <string name="bt_date">Fecha</string>
    <string name="bt_reg">Registrarse</string>
    <string name="err_msg_reg_user">Usuario no válido</string>
    <string name="err_msg_reg_pass_incorrecta">Las contraseñas no coinciden</string>
    <string name="msg_reg_correcto">Registro correcto</string>
    <string name="not_reg_title">Nuevo usuario</string>
    <string name="not_reg_msg">Se ha registrado el usuario $USER_NAME$</string>
    <string name="err_msg_reg_user_incorrecto">El campo usuario no puede estar vacío</string>
    <string name="error_login">Error en identificación</string>
    <string name="error_login_text">Usuario y contraseña incorrectos.</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="all">TODAS</string>
    <string name="add_carro_ok">Se ha añadido el producto a su carro</string>
    <string name="add_carro_error">Se ha producido un error</string>
    <string name="eliminar_carro_ok">Se ha eliminado el producto de su carro</string>
    <string name="eliminar_carro_error">Se ha producido un error</string>
    <string name="error_carrito">Tu carro está vacío</string>
    <string name="compra_realizada">Se ha realizado la compra :)</string>
    <string name="compra_error">Ha habido algún error al realizar la compra :(</string>

    <string name="msg_bienvenida">Bienvenido $USER_NAME$</string>
    <string name="tv_descripcion">Descripción:</string>
    <string name="tv_especificaciones">Especificaciones:</string>
    <string name="bt_comprar">Añadir al carro</string>
    <string name="tv_tipo_producto">Categoría:</string>
    <string name="tv_precio">Precio:</string>
    <string name="tv_user_carro">Carro $USER$</string>
    <string name="tv_precio_total">Precio total:</string>
    <string name="bt_carro_compra">Comprar</string>
    <string name="compo_buy">CompoBuy</string>
    <string name="bt_registrarse">Registrarse</string>
    <string name="bt_acceder">Acceder</string>
    <string name="it_carro">Ver carro</string>
    <string name="it_log_out">Cerrar sesión</string>
    <string name="it_eliminar">Eliminar</string>
    <string name="tv_credito">Tarjeta de dévito o crédito</string>
    <string name="et_cred_titular">Nombre titular</string>
    <string name="et_cred_numero">Número de tarjeta</string>
    <string name="et_cred_fecha_caduc">Fecha de caducidad</string>
    <string name="et_cred_cvc2">Código CVC2</string>
</resources>
