<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.api.compobuy.RegisterActivity">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_register"
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_user" />

            <EditText
                android:id="@+id/et_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_user"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_pass" />

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_pass"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_rep_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_rep_pass" />

            <EditText
                android:id="@+id/et_rep_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_rep_pass"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_date" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <EditText
                    android:id="@+id/et_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/et_date"
                    android:inputType="date" />

                <Button
                    android:id="@+id/bt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.89"
                    android:elevation="0dp"
                    android:text="@string/bt_date" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_city" />

            <EditText
                android:id="@+id/et_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_city"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/bt_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_reg" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
