<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_credito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_credito"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_cred_titular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_cred_titular"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_cred_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_cred_numero"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_cred_fecha_caduc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_cred_fecha_caduc"
        android:inputType="date" />

    <EditText
        android:id="@+id/et_cred_cvc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_cred_cvc2"
        android:inputType="number" />

</LinearLayout>